增加预设UI方案，允许用户在XYWE和YDWE的UI之间切换的功能 更正XYIni中data.ini的位置，统一使用XYPath来配置路径 修正TriggerData/TriggerParams中大部分文件的编码错误（统一使用UTF8） 修正base/WorldEditStrings/__main__.txt中忘记将[[varName]]修改为[[@VAR:varName]]的BUG

--- a/Develop/XYBase/XYBase.csproj
+++ b/Develop/XYBase/XYBase.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XYCodeLibrary.cs" />
     <Compile Include="XYCompiler.cs" />
+    <Compile Include="XYConfig.cs" />
     <Compile Include="XYEncoding.cs" />
     <Compile Include="XYFile.cs" />
     <Compile Include="XYInfo.cs" />
