--- a/core/data/data.ini
+++ b/core/data/data.ini
@@ -1,7 +1,8 @@
 [Config]
 Obsolete=true
 LastCheckObsoleteTime=2016/10/31 18:48:12
+UI=XYWE
 [Tips]
 LastUpdateTime=2016/10/24 21:40:11
 LastCheckTime=2016/11/1 19:56:31
-UsedIndex=,0,2,1
+UsedIndex=,2,4,0,7,5
