优化Command的param字符切割规则 完善XYCompiler，增加如下功能 > SET-TARGET-ROOT > COMPILE:SourcePath,TargetPath > SET-VAR:VariableName,Value > SET-VAR:VariableName | END-VAR > EQUAL:VariableName,Value | END-EQUAL > #CommandName > 具体描述在 https://xywiki.com/p/XYWE:编译器 查看 XYCompiler的部分成员增加继承特性 优化XYCompiler读取变量的规则 优化XYCompiler输出文本的规则 为XYCompiler的命令增加注释符功能 将core/source设置为预编译根目录，不再在csharp中手动注册

--- a/Develop/XYBase/XYBase.csproj
+++ b/Develop/XYBase/XYBase.csproj
@@ -50,8 +50,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Command.cs" />
-    <Compile Include="CreateState.cs" />
+    <Compile Include="Class\Command.cs" />
+    <Compile Include="Enum\CreateState.cs" />
     <Compile Include="Extend\ExtendSystemChar.cs" />
     <Compile Include="Include\Ini.cs" />
     <Compile Include="UIConverter.cs" />
