增加Package机制，用户现在将有能力轻易定制触发器模组和API了。

--- a/core/data/data.ini
+++ b/core/data/data.ini
@@ -4,5 +4,7 @@ LastCheckObsoleteTime=2016/10/31 18:48:12
 UI=XYWE
 [Tips]
 LastUpdateTime=2016/10/24 21:40:11
-LastCheckTime=2016/11/1 19:56:31
-UsedIndex=,2,4,0,7,5
+LastCheckTime=2016/11/5 11:24:45
+UsedIndex=,7
+[Package]
+Enabled=example1,example2,example3
