--- a/Develop/XYTriggerLibraryManager/XYTriggerLibraryManager.csproj
+++ b/Develop/XYTriggerLibraryManager/XYTriggerLibraryManager.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{58D896BF-6664-40F6-83FE-7ED6DEB75577}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{D6C44A05-9C5B-4924-AE41-0DF7724273D5}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>XYBase</RootNamespace>
-    <AssemblyName>XYBase</AssemblyName>
+    <RootNamespace>XYTriggerLibraryManager</RootNamespace>
+    <AssemblyName>XYTriggerLibraryManager</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,57 +24,67 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>none</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\..\core\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
-  </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.IO.Compression" />
-    <Reference Include="System.IO.Compression.FileSystem" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class\Command.cs" />
-    <Compile Include="Enum\CreateState.cs" />
-    <Compile Include="Extend\ExtendSystemChar.cs" />
-    <Compile Include="Include\Ini.cs" />
-    <Compile Include="UIConverter.cs" />
+    <Compile Include="FormXYTriggerLibraryManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormXYTriggerLibraryManager.Designer.cs">
+      <DependentUpon>FormXYTriggerLibraryManager.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XYCodeLibrary.cs" />
-    <Compile Include="XYCompiler.cs" />
-    <Compile Include="XYConfig.cs" />
-    <Compile Include="XYEncoding.cs" />
-    <Compile Include="XYFile.cs" />
-    <Compile Include="XYInfo.cs" />
-    <Compile Include="XYIni.cs" />
-    <Compile Include="XYMpq.cs" />
-    <Compile Include="XYPackage.cs" />
-    <Compile Include="XYPath.cs" />
-    <Compile Include="XYProcess.cs" />
-    <Compile Include="XYRandom.cs" />
-    <Compile Include="XYSource.cs" />
-    <Compile Include="XYTip.cs" />
-    <Compile Include="XYVersion.cs" />
-    <Compile Include="XYWeb.cs" />
+    <EmbeddedResource Include="FormXYTriggerLibraryManager.resx">
+      <DependentUpon>FormXYTriggerLibraryManager.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\XYBase\XYBase.csproj">
+      <Project>{58d896bf-6664-40f6-83fe-7ed6deb75577}</Project>
+      <Name>XYBase</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
