为启动器添加异步特性 去掉不需要同步的ui/xywe/WES/Tip.txt

--- a/.gitignore
+++ b/.gitignore
@@ -247,6 +247,7 @@ ModelManifest.xml
 core/*.exe.config
 core/editor
 core/data/data.ini
+core/source/ui/xywe/WorldEditStrings/Tip.txt
 *.exe.manifest
 *.lastcodeanalysissucceeded
 *.CodeAnalysisLog.xml
