UIConverter now also split "\r\n" Turn some fake Async function into real Add Auto Update Feature, it's in bulding... Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -244,6 +244,9 @@ ModelManifest.xml
 ####################
 # XYWE Project
 
+XYWE.exe
+core/*.dll
+core/*.exe
 core/*.exe.config
 core/editor
 core/data/data.ini
