--- a/Develop/XYBase/XYBase.csproj
+++ b/Develop/XYBase/XYBase.csproj
@@ -56,8 +56,10 @@
     <Compile Include="Include\Ini.cs" />
     <Compile Include="UIConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XYCache.cs" />
     <Compile Include="XYCodeLibrary.cs" />
     <Compile Include="XYCompiler.cs" />
+    <Compile Include="XYCompress.cs" />
     <Compile Include="XYConfig.cs" />
     <Compile Include="XYEncoding.cs" />
     <Compile Include="XYFile.cs" />
@@ -69,6 +71,7 @@
     <Compile Include="XYProcess.cs" />
     <Compile Include="XYRandom.cs" />
     <Compile Include="XYSource.cs" />
+    <Compile Include="XYTextFilter.cs" />
     <Compile Include="XYTip.cs" />
     <Compile Include="XYVersion.cs" />
     <Compile Include="XYWeb.cs" />
