--- a/Develop/XYChecker/XYChecker.csproj
+++ b/Develop/XYChecker/XYChecker.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{506FA10E-837F-4543-926A-9F8B28524F83}</ProjectGuid>
+    <ProjectGuid>{CD11B5C7-D574-483E-A084-21CBA99223B9}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>XYUpdater</RootNamespace>
-    <AssemblyName>XYUpdater</AssemblyName>
+    <RootNamespace>XYChecker</RootNamespace>
+    <AssemblyName>XYChecker</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,27 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormConfirmSwitchVersion.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormConfirmSwitchVersion.Designer.cs">
-      <DependentUpon>FormConfirmSwitchVersion.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormXYUpdater.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormXYUpdater.Designer.cs">
-      <DependentUpon>FormXYUpdater.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Server.cs" />
-    <EmbeddedResource Include="FormConfirmSwitchVersion.resx">
-      <DependentUpon>FormConfirmSwitchVersion.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormXYUpdater.resx">
-      <DependentUpon>FormXYUpdater.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
