--- a/Develop/XYUpdateExecutor/XYUpdateExecutor.csproj
+++ b/Develop/XYUpdateExecutor/XYUpdateExecutor.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{506FA10E-837F-4543-926A-9F8B28524F83}</ProjectGuid>
+    <ProjectGuid>{207D2840-6487-4451-B0E0-1ED22FA59545}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>XYUpdater</RootNamespace>
-    <AssemblyName>XYUpdater</AssemblyName>
+    <RootNamespace>XYUpdateExecutor</RootNamespace>
+    <AssemblyName>XYUpdateExecutor</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\core\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -27,7 +27,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\core\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -46,26 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormConfirmSwitchVersion.cs">
+    <Compile Include="FormXYUpdateExecutor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormConfirmSwitchVersion.Designer.cs">
-      <DependentUpon>FormConfirmSwitchVersion.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormXYUpdater.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormXYUpdater.Designer.cs">
-      <DependentUpon>FormXYUpdater.cs</DependentUpon>
+    <Compile Include="FormXYUpdateExecutor.Designer.cs">
+      <DependentUpon>FormXYUpdateExecutor.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Server.cs" />
-    <EmbeddedResource Include="FormConfirmSwitchVersion.resx">
-      <DependentUpon>FormConfirmSwitchVersion.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormXYUpdater.resx">
-      <DependentUpon>FormXYUpdater.cs</DependentUpon>
+    <EmbeddedResource Include="FormXYUpdateExecutor.resx">
+      <DependentUpon>FormXYUpdateExecutor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -88,12 +78,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\XYBase\XYBase.csproj">
-      <Project>{58d896bf-6664-40f6-83fe-7ed6deb75577}</Project>
-      <Name>XYBase</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
