--- a/Develop/XYChecker/XYChecker.csproj
+++ b/Develop/XYChecker/XYChecker.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormXYChecker.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormXYChecker.Designer.cs">
+      <DependentUpon>FormXYChecker.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
