Add XYChecker.exe, this is a background version checker & downloader Remove XYWE.exe's Obsolete Verify feature Fix "DownloadFileAsync" won't work right when successAction is null Add successWhenNotFound(404) support to "DownloadFileAsync" (Need optimize later) Add XYUpdateExecutor, it will patch files and remove files by given rule Add Update Log Form to XYWE.exe, if a update executed, the log will be display when start XYWE.exe Change Launcher's execute order from "XYUpdater.exe" to "XYUpdateExecutor.exe" Ignore core/data/update directory Ignore *.vshost.exe, they are debug files

--- a/.gitignore
+++ b/.gitignore
@@ -249,11 +249,13 @@ core/*.dll
 core/*.exe
 core/*.exe.config
 core/editor
+core/data/update
 core/data/data.ini
 core/source/ui/xywe/WorldEditStrings/Tip.txt
 *.exe.manifest
 *.lastcodeanalysissucceeded
 *.CodeAnalysisLog.xml
+*.vshost.exe
 
 # XYWE Project
 ####################
