--- a/Develop/XYBase/XYBase.csproj
+++ b/Develop/XYBase/XYBase.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Include\Ini.cs" />
     <Compile Include="UIConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XYAnnouncement.cs" />
     <Compile Include="XYCache.cs" />
     <Compile Include="XYCodeLibrary.cs" />
     <Compile Include="XYCompiler.cs" />
