Re-import SJWE, add all missed component

--- a/core/source/jass/SJ/SWEsystem.cfg
+++ b/core/source/jass/SJ/SWEsystem.cfg
@@ -17,6 +17,17 @@ SetType
 GetType
 SetTypeData
 GetTypeData
+SetHealingThumpAllow
+SetDisplayHealing
+SetIDHealingData
+SetIDHealingPlusData
+SetIDHealingReduceData
+SetTotalHealingData
+GetIDHealingData
+GetIDHealingPlusData
+GetIDHealingReduceData
+GetTotalHealingData
+Healing
 SetSkillHalfDamageBoolean
 GetSkillHalfDamageBoolean 
 SetHalfDamageFactor
