Ignore any xml file in "./core"
Signed-off-by: LazyKnight <i@lazyknight.com>

--- a/.gitignore
+++ b/.gitignore
@@ -254,8 +254,8 @@ core/data/data.ini
 core/source/ui/xywe/WorldEditStrings/Tip.txt
 *.exe.manifest
 *.lastcodeanalysissucceeded
-*.CodeAnalysisLog.xml
 *.vshost.exe
+*.xml
 
 # XYWE Project
 ####################
