Add lost "Develop-Editor/Build" and Add "Update" feature and update .gitignore
lost "Build":
This directory has not been pushed due to .gitignore config, we ignore all "[Bb]uild" file before, and this directory was affect.

add "Update" feature:
We added "Update_Debug.bat" and "Update_Release.bat", and modified "lua/make.lua" for update mode.
update mode use to update some component in developing, it can make debug quickly.
origin YDWE's "Build" only have "Build" feature, it's stupid to wait more than 3 minutes before event debug a char's change.

Signed-off-by: LazyKnight <i@lazyknight.com>

--- a/.gitignore
+++ b/.gitignore
@@ -257,5 +257,8 @@ core/source/ui/xywe/WorldEditStrings/Tip.txt
 *.vshost.exe
 *.xml
 
+# Unlock Develop-Editor Build Directory
+!Develop-Editor/Build
+
 # XYWE Project
 ####################
