Change build & update path
Redirect ydwe_build properties to xywe editor dir.
Convert ydwe_build properties file from LF to CRLF.

Redirect make.lua Result path to xywe editor dir.
Remove all Build_XXXX.bat, we don't use them current time.
Update README.md, remove information about Build_XXX.bat.


Signed-off-by: LazyKnight <i@lazyknight.com>

--- a/Develop-Editor/Development/Core/Solution/ydwe_build.props
+++ b/Develop-Editor/Development/Core/Solution/ydwe_build.props
@@ -3,11 +3,14 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
     <YDWE>$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), build.root))</YDWE>
+    <XYWE>$(YDWE)\..\..\</XYWE>
+    <XYCore>$(XYWE)core\</XYCore>
+    <XYEditor>$(XYCore)editor\</XYEditor>
     <OpenSource>$(YDWE)\..\OpenSource\</OpenSource>
     <ThirdParty>$(YDWE)\..\ThirdParty\</ThirdParty>
     <BuildDir>$(YDWE)\Build\</BuildDir>
+    <BuildBinDir>$(XYEditor)</BuildBinDir>
     <BuildObjDir>$(BuildDir)obj\$(Configuration)\</BuildObjDir>
-    <BuildBinDir>$(BuildDir)bin\$(Configuration)\</BuildBinDir>
     <CoreBin>$(BuildBinDir)bin\</CoreBin>
     <CoreObj>$(BuildObjDir)Core\$(ProjectName)\</CoreObj>
     <LuaPluginBin>$(BuildBinDir)bin\modules\</LuaPluginBin>
