--- a/Develop-Editor/.gitignore
+++ b/Develop-Editor/.gitignore
@@ -17,6 +17,7 @@
 Development/Editor/Component/jass/japi/YDWEJapiOther.j
 !Development/Component/bin
 !Build/lua/luabuild/bin
+!OpenSource/Boost/Boost/preprocessor/debug
 !OpenSource/jpeg/build
 !OpenSource/png/build
 !OpenSource/zlib/build
