change obj dir & fix can't build bug due to lake of code
btw, those code seem does not belong to 1.30.6?
need check why.

Signed-off-by: LazyKnight <i@lazyknight.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ core/*.dll
 core/*.exe
 core/*.exe.config
 core/editor
+core/editorObj
 core/data/update
 core/data/data.ini
 core/source/ui/xywe/WorldEditStrings/Tip.txt
