--- a/Develop-Editor/Development/Core/Solution/ydwe_build.props
+++ b/Develop-Editor/Development/Core/Solution/ydwe_build.props
@@ -5,12 +5,12 @@
     <YDWE>$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), build.root))</YDWE>
     <XYWE>$(YDWE)\..\..\</XYWE>
     <XYCore>$(XYWE)core\</XYCore>
-    <XYEditor>$(XYCore)editor\</XYEditor>
+    <XYEditor>$(XYCore)editor</XYEditor>
     <OpenSource>$(YDWE)\..\OpenSource\</OpenSource>
     <ThirdParty>$(YDWE)\..\ThirdParty\</ThirdParty>
     <BuildDir>$(YDWE)\Build\</BuildDir>
-    <BuildBinDir>$(XYEditor)</BuildBinDir>
-    <BuildObjDir>$(BuildDir)obj\$(Configuration)\</BuildObjDir>
+    <BuildBinDir>$(XYEditor)\</BuildBinDir>
+    <BuildObjDir>$(XYEditor)Obj\</BuildObjDir>
     <CoreBin>$(BuildBinDir)bin\</CoreBin>
     <CoreObj>$(BuildObjDir)Core\$(ProjectName)\</CoreObj>
     <LuaPluginBin>$(BuildBinDir)bin\modules\</LuaPluginBin>
