Update SJUI 1.28.0 to 1.28.2
Signed-off-by: LazyKnight <i@lazyknight.com>

--- a/core/source/jass/SJ/SJWEBase.cfg
+++ b/core/source/jass/SJ/SJWEBase.cfg
@@ -1,5 +1,6 @@
 Hex_Str2I
 I2Hex_Str
+SetStringColor
 InitIndex
 CreateIndex
 GetMaxIndex
@@ -8,11 +9,15 @@ DestroyIndexAll
 quick_sort
 SaveData
 LoadData
-Probability
 SpaceVectorRAD
 SpaceVectorDEG
 GetSpaceVector_x
 GetSpaceVector_y
 GetSpaceVector_z
+Probability
 Revive_Hero
 ItemSuperimposition
+CreateMultiboardForPlayer
+GetPlayerMultiboard
+DisplayMultibosrdToPlayer
+DisplayMultibosrdFoForce
