--- a/core/source/jass/SJ/SWEsystem.cfg
+++ b/core/source/jass/SJ/SWEsystem.cfg
@@ -17,26 +17,31 @@ SetType
 GetType
 SetTypeData
 GetTypeData
+SetUnitData
+GetUnitData
+UnitMimeticdSkillDamageBoolean
 SetHealingThumpAllow
 SetDisplayHealing
+SetHealingThumpBoolean
+GetHealingThumpBoolean
 SetIDHealingData
-SetIDHealingPlusData
-SetIDHealingReduceData
-SetTotalHealingData
 GetIDHealingData
+SetIDHealingPlusData
 GetIDHealingPlusData
+SetIDHealingReduceData
 GetIDHealingReduceData
+SetTotalHealingData
 GetTotalHealingData
-Healing
 SetSkillHalfDamageBoolean
-GetSkillHalfDamageBoolean 
+GetSkillHalfDamageBoolean
 SetHalfDamageFactor
 GetHalfDamageFactor
 SetSkillHalfDamageFactor
 GetSkillHalfDamageFactor
-SetReduceDamagePercent
-SetReduceDamage
-SetIncreaseDamagePercent
+SetItemTypeNumberMax
+GetItemTypeNumberMax
+SetItemTypeName
+GetItemTypeName
 SetUnitImmuneType
 SetUnitReboundType
 SetUnitAbsorptionType
@@ -46,50 +51,79 @@ UnitAbsorptionConditions
 SetUnitImmuneDamage
 SetUnitReboundDamage
 SetUnitAbsorptionDamage
+SetReduceDamagePercent
+SetReduceDamage
+SetIncreaseDamagePercent
 GetReduceDamagePercent
 GetReduceDamage
 GetIncreaseDamagePercent
 SetUnitPredicable
-SetSkillPredicable 
+SetUnitSpecialPredicable
+SetSkillPredicable
+SetUnitSkillDamage
 SetUnitSkillPredicable
 SetItemPredicable
+SetItemSpecialPredicable
+SetItemSpecialPredicableAother
 UnitItemPredicable
+TriggerRegisterAnyUnitHealingEvent
+HealingEventTriggerListExecute
+GetHealingEventHealingSource
+GetHealingEventTreatedUnit
+GetHealingEventHealing
+DestroyAnyUnitHealingEvent
+Healing
+MimeticdMeleeEventTriggerListExecute
+GetMimeticdMeleeEventDamageSource
+GetMimeticdMeleeEventDamagedUnit
+GetMimeticdMeleeEventDamage
+MimeticdMagicEventTriggerListExecute
+GetMimeticdMagicEventDamageSource
+GetMimeticdMagicEventDamagedUnit
+GetMimeticdMagicEventDamage
+TriggerRegisterAnyUnitReboundDamageEvent
+ReboundDamageEventTriggerListExecute
+DestroyAnyUnitReboundDamageEvent
+GetReboundDamageEventDamageSource
+GetReboundDamageEventDamagedUnit
+GetReboundDamageEventDamage
+DamageDispose
 CountMeleeOriginalDamageMain
 CountSkillOriginalDamageMain
 MeleeOriginalDamageMain
 SkillOriginalDamageMain 
 MimeticdDamage
+GetUnitDamageBeforeMimeticd
+GetUnitMimeticdDamage
 MimeticdMeleeDamage
 MimeticdSkillDamage
 MimeticdMeleeDamage_Type
 MimeticdSkillDamage_Type
-GetUnitMimeticdDamage
-DisplayPreinstallUnitPredicable
-DisplayPreinstallItemPredicable
-DisplayPreinstallSkillPredicable
-DisplayUnitPredicable
+TriggerRegisterAnyUnitDamagedEvent
+DestroyAnyUnitDamagedEvent
+SetItemPredicableMultiboardItemBuyItem
+SetItemPredicableMultiboardItem
+HeroLevelUp
+SetDisplayDamage
+SetItemSlotUnitType
+ImmuneDamageAbilityID
 DamageSystemInitialization
+SetSystemStringColor
 OpenDamageEventPreinstall
 OpenSystemPreinstallDATA
 OpenDisplayDialog
 DialogSystemInitialization
-Revive_Hero
-ItemSuperimposition
-HeroLevelUp
-SetUnitImmuneDamage
-SetItemSlotUnitType
-SetDisplayDamage
-ImmuneDamageAbilityID
-SetUnitSkillDamage
-GetUnitDamageBeforeMimeticd
-SetItemTypeNumberMax
-GetItemTypeNumberMax
-SetItemTypeName
-GetItemTypeName
-SetUnitSpecialPredicable
-SetItemSpecialPredicable
-SetItemSpecialPredicableAother
+DisplayPreinstallUnitPredicable
+DisplayPreinstallItemPredicable
+DisplayPreinstallSkillPredicable
+DisplayUnitPredicable
 DisplayPreinstallUnitSpecialPredicable
 DisplayPreinstallItemSpecialPredicable
 DisplayUnitSpecialPredicable
-SetSystemStringColor
+DisplayItemPredicableMultiboard
+SetUnitPredicableMultiboardItem
+DisplayUnitPredicableMultiboard
+InitMultiboardSystem
+SwitchMultiboard
+GetUnitPredicableMultiboard
+GetItemPredicableMultiboard
