--- a/Develop-Editor/Development/Plugin/YDColorizer/WinApi/WinApi.csproj
+++ b/Develop-Editor/Development/Plugin/YDColorizer/WinApi/WinApi.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\core\editor\plugin\YDColorizer\</OutputPath>
+    <OutputPath>..\..\..\..\..\core\editor\plugin\YDColorizer\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -26,7 +26,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\..\..\core\editor\plugin\YDColorizer\</OutputPath>
+    <OutputPath>..\..\..\..\..\core\editor\plugin\YDColorizer\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
