--- a/Develop-Editor/Development/Plugin/YDColorizer/YDColorizer/YDColorizer.csproj
+++ b/Develop-Editor/Development/Plugin/YDColorizer/YDColorizer/YDColorizer.csproj
@@ -35,7 +35,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>..\..\..\..\core\editor\plugin\YDColorizer\</OutputPath>
+    <OutputPath>..\..\..\..\..\core\editor\plugin\YDColorizer\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -49,7 +49,7 @@
     <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
-    <OutputPath>..\..\..\..\core\editor\plugin\YDColorizer\</OutputPath>
+    <OutputPath>..\..\..\..\..\core\editor\plugin\YDColorizer\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
